force-app/main/default/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Account.ShippingStreet + &quot;, &quot; + Account.ShippingCity   + &quot;, &quot; +  Account.ShippingState   + &quot;, &quot; + Account.ShippingPostalCode + &quot;, &quot; +  Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>