force-app/main/default/objects/Case/fields/Machine_Type__c.field-meta.xml
<CustomField>
    <fullName>Machine_Type__c</fullName>
    <formula>TEXT( Product2__r.Machine_Type__c )</formula>
    <label>Machine Type</label>
    <type>Text</type>
</CustomField>