force-app/main/default/objects/Case/fields/Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Price__c</fullName>
    <formula>Product2__r.Price__c</formula>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>