force-app/main/default/objects/Case/recordTypes/Closed.recordType-meta.xml
<RecordType>
    <fullName>Closed</fullName>
    <active>true</active>
    <businessProcess>Galactus Support Process</businessProcess>
    <label>Closed</label>
</RecordType>