force-app/main/default/objects/Case/recordTypes/Installation.recordType-meta.xml
<RecordType>
    <fullName>Installation</fullName>
    <active>true</active>
    <businessProcess>Galactus Support Process</businessProcess>
    <description>To create tickets on installation for machinery.</description>
    <label>Installation</label>
</RecordType>