force-app/main/default/objects/Case/recordTypes/ND_Closed.recordType-meta.xml
<RecordType>
    <fullName>ND_Closed</fullName>
    <active>true</active>
    <businessProcess>Galactus Support Process</businessProcess>
    <label>ND Closed</label>
</RecordType>