force-app/main/default/objects/Case/recordTypes/New_Device.recordType-meta.xml
<RecordType>
    <fullName>New_Device</fullName>
    <active>true</active>
    <businessProcess>Galactus Support Process</businessProcess>
    <description>To create tickets on a new order placed for a machinery.</description>
    <label>New Device</label>
</RecordType>