force-app/main/default/objects/Case/recordTypes/Repair.recordType-meta.xml
<RecordType>
    <fullName>Repair</fullName>
    <active>true</active>
    <businessProcess>Galactus Support Process</businessProcess>
    <description>To create tickets on any kind of repair for machinery.</description>
    <label>Repair</label>
</RecordType>