force-app/main/default/objects/Case/validationRules/Status_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &quot;Closed&quot;) &amp;&amp; OR(ISCHANGED( OwnerId ), ISCHANGED( Status ))</errorConditionFormula>
    <errorMessage>The status cannot be changed if the case is closed.</errorMessage>
</ValidationRule>